--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 339,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +175,7 @@
        "4     low  "
       ]
      },
-     "execution_count": 267,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "(14999, 10)"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 334,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 343,
    "metadata": {
     "scrolled": true
    },
@@ -451,7 +451,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 344,
    "metadata": {
     "scrolled": false
    },
@@ -474,7 +474,7 @@
        "3008"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "(11991, 10)"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 284,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "16.604119756484028"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 348,
    "metadata": {
     "scrolled": true
    },
@@ -756,7 +756,7 @@
    "source": [
     "After a quick review of the dataset I realise some issues such that:\n",
     "\n",
-    "- **sales** : the name is not relevant to values. It seems to take the name of the category with the largest values. I will use \"department\". Also, it's type is object and i will use a numeric type to work better with statistic function. \n",
+    "- **sales** : the name is not relevant to values. It seems to take the name of the category with the largest values. Instead I will use \"department\". Also, it's type is object and i will use a numeric type to work better with statistic function. \n",
     "- **salaries**: it is also an object variable. I will shift it to numeric.\n",
     "- **time_spend_company** \": the column name doesn't specify the data unit. I will assume \"years\".\n",
     "- **number_project** and **average_monthly_hours** :I do not know what the column name is trying to imply.\n",
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "4      sales     low  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 351,
    "metadata": {
     "scrolled": false
    },
@@ -946,12 +946,12 @@
      "data": {
       "text/plain": [
        "Index(['satisfaction_level', 'last_evaluation', 'number_project',\n",
-       "       'average_montly_hours', 'time_spend_company', 'Work_accident', 'left',\n",
-       "       'promotion_last_5years', 'sales', 'salary'],\n",
+       "       'average_montly_hours', 'time_spend_company_years', 'Work_accident',\n",
+       "       'left', 'promotion_last_5years', 'department', 'salary'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -972,15 +972,15 @@
        " 'last_evaluation',\n",
        " 'number_project',\n",
        " 'average_montly_hours',\n",
-       " 'time_spend_company',\n",
+       " 'time_spend_company_years',\n",
        " 'Work_accident',\n",
        " 'left',\n",
        " 'promotion_last_5years',\n",
-       " 'sales',\n",
+       " 'department',\n",
        " 'salary']"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 353,
    "metadata": {
     "scrolled": true
    },
@@ -1005,15 +1005,15 @@
        " 'last_evaluation',\n",
        " 'number_project',\n",
        " 'average_montly_hours',\n",
-       " 'time_spend_company',\n",
+       " 'time_spend_company_years',\n",
        " 'Work_accident',\n",
        " 'promotion_last_5years',\n",
-       " 'sales',\n",
+       " 'department',\n",
        " 'salary',\n",
        " 'left']"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1054,10 +1054,10 @@
        "      <th>last_evaluation</th>\n",
        "      <th>number_project</th>\n",
        "      <th>average_montly_hours</th>\n",
-       "      <th>time_spend_company</th>\n",
+       "      <th>time_spend_company_years</th>\n",
        "      <th>Work_accident</th>\n",
        "      <th>promotion_last_5years</th>\n",
-       "      <th>sales</th>\n",
+       "      <th>department</th>\n",
        "      <th>salary</th>\n",
        "      <th>left</th>\n",
        "    </tr>\n",
@@ -1140,22 +1140,22 @@
        "3                0.72             0.87               5                   223   \n",
        "4                0.37             0.52               2                   159   \n",
        "\n",
-       "   time_spend_company  Work_accident  promotion_last_5years  sales  salary  \\\n",
-       "0                   3              0                      0  sales     low   \n",
-       "1                   6              0                      0  sales  medium   \n",
-       "2                   4              0                      0  sales  medium   \n",
-       "3                   5              0                      0  sales     low   \n",
-       "4                   3              0                      0  sales     low   \n",
+       "   time_spend_company_years  Work_accident  promotion_last_5years department  \\\n",
+       "0                         3              0                      0      sales   \n",
+       "1                         6              0                      0      sales   \n",
+       "2                         4              0                      0      sales   \n",
+       "3                         5              0                      0      sales   \n",
+       "4                         3              0                      0      sales   \n",
        "\n",
-       "   left  \n",
-       "0     1  \n",
-       "1     1  \n",
-       "2     1  \n",
-       "3     1  \n",
-       "4     1  "
+       "   salary  left  \n",
+       "0     low     1  \n",
+       "1  medium     1  \n",
+       "2  medium     1  \n",
+       "3     low     1  \n",
+       "4     low     1  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
