--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 182,
    "metadata": {
     "scrolled": true
    },
@@ -466,19 +466,19 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#First of all, we will calculate the number of employees who leave the company\n",
+    "#number of employees who leave the company\n",
     "hr.groupby('left')['left'].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 184,
    "metadata": {
     "scrolled": false
    },
@@ -489,19 +489,21 @@
        "23.80825388359224"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Finally, divide the number of employee who left the company by the number of total employees at the worksite\n",
+    "#Turn over ratio as a result of the division of the number of employee who left the company \n",
+    "#by the number of total employees at the worksite \n",
+    "\n",
     "len(hr[hr['left']==1])/len(hr)*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 185,
    "metadata": {
     "scrolled": false
    },
@@ -522,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 186,
    "metadata": {
     "scrolled": false
    },
@@ -545,7 +547,7 @@
        "3008"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +568,7 @@
        "(11991, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 188,
    "metadata": {
     "scrolled": true
    },
@@ -740,7 +742,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,12 +755,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Which is the turnover ratio in this company after removing duplicates?"
+    "### Which is the turnover ratio after removing duplicates?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 189,
    "metadata": {
     "scrolled": true
    },
@@ -772,7 +774,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +794,7 @@
        "16.604119756484028"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,12 +829,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start by taking a look at **people who stay** and **people who leave** the company"
+    "### Let's start by taking a look at **people who stay** and **people who leave** the company"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#some definitions:\n",
+    "people_who_stay= hr_no_dupl[hr_no_dupl['left']==0]\n",
+    "people_who_leave= hr_no_dupl[hr_no_dupl['left']==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n",
+      "1991\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sanity check\n",
+    "print(len(people_who_stay))\n",
+    "print(len(people_who_leave))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +950,7 @@
        "1                  0.004018  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,9 +964,10 @@
    "metadata": {},
    "source": [
     "At a glance:\n",
-    "* It make sense that average of **satisfaction_level** and **promotion_last_5years** in people who stay is higher.But, is **having an accident** a key factor to stay at company?\n",
-    "* On the other hand, the average of **number_project**, **average_montly_hours** and **time_spend_company** is slightly higher in people who leave the company. \n",
-    "* Finally, the average of **last_evaluation** is quite similar among both groups. Does it make sense?"
+    "\n",
+    "* It make sense that average of satisfaction_level and promotion_last_5years in people who stay is higher.But, is having an accident a key factor to stay at company?\n",
+    "* On the other hand, the average of number_project, average_montly_hours and time_spend_company is slightly higher in people who leave the company.\n",
+    "* Finally, the average of last_evaluation is quite similar among both groups. Does it make sense?"
    ]
   },
   {
@@ -977,54 +1011,19 @@
     "\n",
     "* As expected, the **\"satisfaction level\" has the largest correlation with the decision to stay or leave** the company (-0.35). Between \"Work_accident\" and \"left\" column there is also a negative correlation (-0.13) whereas with the \"time_spend_company\" it is positive (0.17). \n",
     "\n",
-    "It also shows _the Pearson's correlation coefficient among features_: \n",
+    "Graph 1 also shows _the Pearson's correlation coefficient among features_: \n",
     "\n",
-    "* There is a negative correlation coefficient (-0.15) between \"average_montly_hours\" and \"satisfaction_level\" . It seems to indicate that people value enjoy more free time.\n",
-    "* However,  it also shows a strong and positive correlation among 'last_evaluation'  with 'number_project' and \"average_montly_hours\" . It could  indicate that the company recognizes and values their employees' capacity and dedication at work.\n"
+    "* There is a **negative correlation** coefficient (-0.15) between **\"average_montly_hours\" and \"satisfaction_level\"** . __It seems to indicate that people value enjoy more free time.__\n",
+    "\n",
+    "\n",
+    "* However,  it also shows a __strong and positive correlation__ among __'last_evaluation'  with 'number_project' and \"average_montly_hours\"__. It could  indicate that the __company recognizes and values their employees' capacity and dedication at work.__\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Some Visualitations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### The objetive of these analysis is try to understand why people leave their jobs. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "people_who_stay= hr_no_dupl[hr_no_dupl['left']==0]\n",
-    "people_who_leave= hr_no_dupl[hr_no_dupl['left']==1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n",
-      "1991\n"
-     ]
-    }
-   ],
-   "source": [
-    "#sanity check\n",
-    "print(len(people_who_stay))\n",
-    "print(len(people_who_leave))"
+    "# 4. Some Visualitations and analysis"
    ]
   },
   {
