--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -1380,7 +1380,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Grafico con salarios y satisfacción"
+   ]
   },
   {
    "cell_type": "markdown",
