KNN analysis added

--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +179,7 @@
        "4     low  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "(14999, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -425,7 +425,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -466,7 +466,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -489,7 +489,7 @@
        "23.80825388359224"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {
     "scrolled": false
    },
@@ -524,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -547,7 +547,7 @@
        "3008"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "(11991, 10)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -742,7 +742,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -774,7 +774,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "16.604119756484028"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "16.604119756484028"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "1                  0.004018  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "Name: left, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -1117,6 +1117,9 @@
     }
    ],
    "source": [
+    "people_who_leave_by_department= people_who_leave.groupby('sales')['left'].count().sort_values(ascending=False)\n",
+    "\n",
+    "\n",
     "#Turnover ratio:\n",
     "TurnoverRatio_by_department= np.round((people_who_leave_by_department/total_employees_by_department)*100,decimals=1)\n",
     "TurnoverRatio_by_department.sort_values(ascending=False).plot(kind='bar')\n",
@@ -1143,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
@@ -1182,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -1269,7 +1272,7 @@
        "1                           0.025946  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -1349,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
@@ -1404,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1490,7 @@
        "array(['low', 'medium', 'high'], dtype=object)"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1529,61 +1532,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5899</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11563</th>\n",
+       "      <th>5949</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3060</th>\n",
+       "      <th>6489</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2725</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9692</th>\n",
+       "      <th>10436</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5350</th>\n",
+       "      <th>1945</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10021</th>\n",
+       "      <th>678</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9581</th>\n",
+       "      <th>1821</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10326</th>\n",
+       "      <th>460</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9364</th>\n",
+       "      <th>907</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6104</th>\n",
+       "      <th>9854</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1594,19 +1597,19 @@
       ],
       "text/plain": [
        "       high  low  medium\n",
-       "5899      0    0       1\n",
-       "11563     0    1       0\n",
-       "3060      0    1       0\n",
-       "9692      0    0       1\n",
-       "5350      0    1       0\n",
-       "10021     0    1       0\n",
-       "9581      0    0       1\n",
-       "10326     0    0       1\n",
-       "9364      0    1       0\n",
-       "6104      0    0       1"
+       "5949      0    1       0\n",
+       "6489      1    0       0\n",
+       "2725      0    1       0\n",
+       "10436     0    0       1\n",
+       "1945      0    1       0\n",
+       "678       0    1       0\n",
+       "1821      0    0       1\n",
+       "460       0    0       1\n",
+       "907       0    1       0\n",
+       "9854      0    0       1"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1769,7 @@
        "4     low     0    1       0  "
       ]
      },
-     "execution_count": 401,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1792,7 @@
        "       'IT', 'product_mng', 'marketing', 'RandD'], dtype=object)"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1801,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1874,7 @@
        "Name: sales, Length: 11991, dtype: int64"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -2040,7 +2043,7 @@
        "4     low     0    1       0                   0  "
       ]
      },
-     "execution_count": 404,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2197,7 @@
        "4       0                   0  "
       ]
      },
-     "execution_count": 405,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2214,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2237,7 @@
        " 'department_numeric']"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2246,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2269,7 @@
        " 'left']"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2423,7 @@
        "4       0                   0     1  "
       ]
      },
-     "execution_count": 408,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2493,7 @@
        "(11991, 12)"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2517,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2537,17 +2540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Split the dataset into two parts: train and test\n",
     "from sklearn.model_selection import train_test_split\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.33, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2560,31 +2564,145 @@
     }
    ],
    "source": [
-    "#We check to ensure we have the desired 70% train, 30% split of the data\n",
+    "#checking we have the desired 70% train, 30% split of the data\n",
     "print(\"{0:0.2f}% in training set\".format((len(x_train)/len(hr_data.index)) * 100))\n",
     "print(\"{0:0.2f}% in test set\".format((len(x_test)/len(hr_data.index)) * 100))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Choosing the model\n",
+    "\n",
+    "### Looking for the best accuracy, I will analyse some prediction models \n",
+    "\n",
+    "### Let's start with K-nearest Neightbors"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "clf1 = KNeighborsClassifier(n_neighbors=10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=10, p=2,\n",
+       "           weights='uniform')"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf1.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9295098534613441"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test,clf1.predict(x_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_neighbors': 4}"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf1=GridSearchCV(estimator =KNeighborsClassifier(n_neighbors=5),\n",
+    "                  param_grid={\"n_neighbors\":np.arange(1,50)})\n",
+    "\n",
+    "#clf1.fit(X_train,y_train)opcional\n",
+    "clf1.fit(x,y)\n",
+    "clf1.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9298633941450096"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(KNeighborsClassifier(n_neighbors=4),x,y).mean()"
+   ]
   },
   {
    "cell_type": "code",
