--- a/Employee_retention.ipynb
+++ b/Employee_retention.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "hr=pd.read_csv(\"data/HR_comma_sep.csv\")\n",
+    "hr=pd.read_csv(\"data/HR_data.csv\")\n",
     "hr.head()"
    ]
   },
@@ -2577,12 +2577,12 @@
     "\n",
     "### Looking for the best accuracy, I will analyse some prediction models \n",
     "\n",
-    "### Let's start with K-nearest Neightbors"
+    "### Let's start with _K-nearest Neighbors_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
        "0.9295098534613441"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,7 +2643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2652,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2661,7 +2661,7 @@
        "{'n_neighbors': 4}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2670,8 +2670,7 @@
     "clf1=GridSearchCV(estimator =KNeighborsClassifier(n_neighbors=5),\n",
     "                  param_grid={\"n_neighbors\":np.arange(1,50)})\n",
     "\n",
-    "#clf1.fit(X_train,y_train)opcional\n",
-    "clf1.fit(x,y)\n",
+    "clf1.fit(x,y) #training the model with the best_params\n",
     "clf1.best_params_"
    ]
   },
